Install and configure gd

--- a/php-5.6-fpm-mysql-xdebug/Dockerfile
+++ b/php-5.6-fpm-mysql-xdebug/Dockerfile
@@ -4,12 +4,14 @@ FROM php:5.6-fpm
 RUN apt-get update && apt-get install -y \
         mysql-client
 
-RUN docker-php-ext-install pdo_mysql mbstring opcache
+RUN docker-php-ext-install pdo_mysql mbstring opcache \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install gd
 
 # Install and configure Xdebug
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug \
-    && sed -i '1 a xdebug.remote_autostart=true' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && sed -i '1 a xdebug.remote_autostart=false' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && sed -i '1 a xdebug.remote_mode=req' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && sed -i '1 a xdebug.remote_handler=dbgp' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && sed -i '1 a xdebug.remote_connect_back=1 ' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
