Add missing packages

--- a/php-5.6-fpm-mysql-xdebug/Dockerfile
+++ b/php-5.6-fpm-mysql-xdebug/Dockerfile
@@ -2,7 +2,13 @@ FROM php:5.6-fpm
 
 # Install modules
 RUN apt-get update && apt-get install -y \
-        mysql-client
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    libpng12-dev \
+    libpq-dev \
+    apt-utils \
+    mysql-client \
+    zlib1g-dev
 
 RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
