Install s3cmd with pip and add ca-certificates for python

--- a/s3cmd/Dockerfile
+++ b/s3cmd/Dockerfile
@@ -2,9 +2,11 @@ FROM alpine:latest
 
 RUN apk add --update python
 RUN apk add --update py-pip
+RUN pip install --upgrade pip
+RUN apk --update add ca-certificates python
 RUN pip install python-dateutil
 
-ADD files/s3cmd-1.6.1.tar.gz /usr/local/bin/
+RUN pip install s3cmd
 
 RUN mkdir /opt
 WORKDIR /opt
