--- a/php-5.6-fpm-mysql-xdebug/Dockerfile
+++ b/php-5.6-fpm-mysql-xdebug/Dockerfile
@@ -14,6 +14,7 @@ RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd
 ADD local.ini /usr/local/etc/php/conf.d/local.ini
+ADD fake-sendmail.sh /usr/local/bin/fake-sendmail.sh
 
 ADD entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
