--- a/php-5.6-fpm-mysql-xdebug/Dockerfile
+++ b/php-5.6-fpm-mysql-xdebug/Dockerfile
@@ -13,6 +13,9 @@ RUN apt-get update && apt-get install -y \
 RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd
+
+RUN pecl install memcache && docker-php-ext-enable memcache
+
 ADD local.ini /usr/local/etc/php/conf.d/local.ini
 ADD fake-sendmail.sh /usr/local/bin/fake-sendmail.sh
 
