--- a/php-5.6-fpm-mysql-xdebug/Dockerfile
+++ b/php-5.6-fpm-mysql-xdebug/Dockerfile
@@ -14,6 +14,11 @@ RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd
 
+RUN curl -L https://pecl.php.net/get/redis-2.2.7.tgz >> /usr/src/php/ext/redis.tgz \
+    && tar -xf /usr/src/php/ext/redis.tgz -C /usr/src/php/ext/ \
+    && rm /usr/src/php/ext/redis.tgz \
+    && docker-php-ext-install redis-2.2.7
+
 RUN pecl install memcache && docker-php-ext-enable memcache
 
 ADD local.ini /usr/local/etc/php/conf.d/local.ini
