--- a/php-5.6-fpm-mysql-xdebug/Dockerfile
+++ b/php-5.6-fpm-mysql-xdebug/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     apt-utils \
     mysql-client \
-    zlib1g-dev
+    zlib1g-dev \
+    imagemagick
 
 RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
