Also install imagemagick as a PHP extension

--- a/php-5.6-fpm-mysql-xdebug/Dockerfile
+++ b/php-5.6-fpm-mysql-xdebug/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:5.6-fpm
 
 # Install modules
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y  --no-install-recommends \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
     libpng12-dev \
@@ -15,6 +15,11 @@ RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd
 
+# imagemagick as PHP extension
+RUN apt-get install -y libmagickwand-6.q16-dev --no-install-recommends \
+ && ln -s /usr/lib/x86_64-linux-gnu/ImageMagick-6.8.9/bin-Q16/MagickWand-config /usr/bin \
+ && pecl install imagick \
+ && echo "extension=imagick.so" > /usr/local/etc/php/conf.d/ext-imagick.ini
 
 
 RUN curl -L https://pecl.php.net/get/redis-2.2.7.tgz > /tmp/redis.tgz \
