- Adding additional image handling libraries - Ensure redis is really loaded - Remove xdebug from this step

--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -2,9 +2,28 @@ FROM php:7.1-fpm
 
 RUN pecl install mysql redis
 
-RUN apt-get update && apt-get install -y \
+# Install modules
+RUN apt-get update && apt-get install -y  --no-install-recommends \
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    libpng12-dev \
+    libpq-dev \
+    apt-utils \
+    mysql-client \
+    zlib1g-dev \
     git \
+    imagemagick \
     unzip
+
+RUN docker-php-ext-install pdo_mysql mbstring opcache \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install gd
+
+# imagemagick as PHP extension
+RUN apt-get install -y libmagickwand-6.q16-dev --no-install-recommends \
+ && pecl install imagick \
+ && echo "extension=imagick.so" > /usr/local/etc/php/conf.d/ext-imagick.ini
+
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -17,20 +36,5 @@ RUN "date"
 
 # Type docker-php-ext-install to see available extensions
 RUN docker-php-ext-install pdo pdo_mysql
-echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini 
-
-# install xdebug
-RUN pecl install xdebug
-RUN docker-php-ext-enable xdebug
-RUN echo "error_reporting = E_ALL" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-RUN echo "display_startup_errors = On" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-RUN echo "display_errors = On" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-RUN echo "xdebug.remote_enable=1" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-RUN echo "xdebug.remote_connect_back=1" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-RUN echo "xdebug.idekey=\"PHPSTORM\"" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-RUN echo "xdebug.remote_port=9001" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-
-
-
-
+RUN echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini 
 
