include ssmtp mail proxy

--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -13,7 +13,9 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     zlib1g-dev \
     git \
     imagemagick \
-    unzip
+    unzip \
+    mailutils \
+    ssmtp
 
 RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
