Include exif library

--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
 RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd
+    && docker-php-ext-install exif
 
 # imagemagick as PHP extension
 RUN apt-get install -y libmagickwand-6.q16-dev --no-install-recommends \
