Add MCrypt to php-5.6-fpm-mysql-xdebug image

--- a/php-5.6-fpm-mysql-xdebug/Dockerfile
+++ b/php-5.6-fpm-mysql-xdebug/Dockerfile
@@ -11,12 +11,14 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     zlib1g-dev \
     imagemagick \
     libxml2-dev \
-    unzip
+    unzip \
+    libmcrypt-dev
 
 RUN docker-php-ext-install pdo_mysql mbstring opcache \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
-    && docker-php-ext-install -j$(nproc) zip
+    && docker-php-ext-install -j$(nproc) zip \
+    && docker-php-ext-install -j$(nproc) mcrypt
 
 # imagemagick as PHP extension
 RUN apt-get install -y libmagickwand-6.q16-dev --no-install-recommends \
