--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -22,6 +22,10 @@ RUN docker-php-ext-install pdo_mysql mbstring opcache zip curl \
     && docker-php-ext-install gd \
     && docker-php-ext-install exif
 
+
+# Install required RabbitMQ modules
+RUN docker-php-ext-install -j$(nproc) bcmath
+
 # imagemagick as PHP extension
 RUN apt-get install -y libmagickwand-6.q16-dev --no-install-recommends \
  && pecl install imagick \
