--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -16,9 +16,16 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     imagemagick \
     unzip \
     mailutils \
-    ssmtp
+    ssmtp \
+    libzip-dev \
+    zip
 
-RUN docker-php-ext-install pdo_mysql mbstring opcache zip curl \
+
+# Install libzip https://github.com/docker-library/php/issues/61
+RUN docker-php-ext-configure zip --with-libzip \
+  && docker-php-ext-install zip
+  
+RUN docker-php-ext-install pdo_mysql mbstring opcache curl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd \
     && docker-php-ext-install exif \
