The libpng12-dev no longer has installation candidate. The correct package should be libpng-dev, per PHP docs.

--- a/php-with-supervisor-for-workers/Dockerfile
+++ b/php-with-supervisor-for-workers/Dockerfile
@@ -9,7 +9,7 @@ RUN pecl install mysql redis
 RUN apt-get update && apt-get install -y  --no-install-recommends \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
-    libpng12-dev \
+    libpng-dev \
     libpq-dev \
     apt-utils \
     mysql-client \
