--- a/php-with-supervisor-for-workers/Dockerfile
+++ b/php-with-supervisor-for-workers/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
     libpq-dev \
+    libpng-dev \
     libcurl4-openssl-dev \
     libxml2-dev \
     apt-utils \
