Install drush as composer package.

--- a/php-5.6-fpm-redis/Dockerfile
+++ b/php-5.6-fpm-redis/Dockerfile
@@ -10,7 +10,6 @@ RUN apt-get update && apt-get install -y \
         libpq-dev \
         apt-utils \
         git \
-        drush \
         mysql-client \
         zlib1g-dev \
         libxml2-dev \
@@ -31,5 +30,9 @@ RUN chmod +x /usr/local/bin/entrypoint.sh
 
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer
+
+# Install Drush.
+RUN composer global require drush/drush:7.*
+ADD profile-extras.sh /etc/profile.d/profile-extras.sh
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
