--- a/php-5.3/Dockerfile
+++ b/php-5.3/Dockerfile
@@ -4,7 +4,7 @@ FROM andthensome/docker-php-5.3-fpm
 RUN apt-get update && apt-get install -y  --no-install-recommends \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
-    libpng12-dev \
+    libpng-dev \
     libpq-dev \
     apt-utils \
     mysql-client \
