Add drush to php7 dockerfile for drupal7.

--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -56,5 +56,15 @@ RUN echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
 
 ADD entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
+# Install composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer
+
+# Install Drush.
+RUN composer global require drush/drush:7.*
+ADD profile-extras.sh /etc/profile.d/profile-extras.sh
+
+# Symlink in all the new stuff to the default path, to be even more sure it's discovered.
+RUN ln -s /root/.composer/vendor/bin/* /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
