Add webp config option in gd extension.

--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -19,7 +19,7 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     ssmtp
 
 RUN docker-php-ext-install pdo_mysql mbstring opcache zip curl \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-webp-dir==/usr/include/  \
     && docker-php-ext-install gd \
     && docker-php-ext-install exif \
     && docker-php-ext-install soap
