Change ssmtp to msmtp.

--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     imagemagick \
     unzip \
     mailutils \
-    ssmtp
+    msmtp
 
 RUN docker-php-ext-install pdo_mysql mbstring opcache zip curl \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-webp-dir==/usr/include/  \
