--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -30,7 +30,7 @@ RUN docker-php-ext-install pdo_mysql mbstring opcache zip curl \
 RUN docker-php-ext-install -j$(nproc) bcmath
 
 # imagemagick as PHP extension
-RUN apt-get install -y libmagickwand-6.q16-dev --no-install-recommends \
+RUN apt-get install -y libmagickwand-dev --no-install-recommends \
  && pecl install imagick \
  && echo "extension=imagick.so" > /usr/local/etc/php/conf.d/ext-imagick.ini
 
