--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -44,7 +44,7 @@ RUN \
 
 
 # Install Composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=1.10.17
 RUN composer --version
 
 # Set timezone
