--- a/php8/Dockerfile-8.1-fpm
+++ b/php8/Dockerfile-8.1-fpm
@@ -47,11 +47,6 @@ RUN \
     docker-php-ext-configure ldap --with-libdir=lib/$debArch/ && \
     docker-php-ext-install ldap
 
-
-# Install Composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN composer --version
-
 # Set timezone
 RUN rm /etc/localtime
 RUN ln -s /usr/share/zoneinfo/Europe/Copenhagen /etc/localtime
@@ -60,6 +55,9 @@ RUN "date"
 # Type docker-php-ext-install to see available extensions
 RUN docker-php-ext-install pdo pdo_mysql
 RUN echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
+
+# Install Composer
+COPY --from=composer:2.1.8 /usr/bin/composer /usr/local/bin/composer
 
 ADD entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
