Push built images.

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -54,6 +54,7 @@ jobs:
           file: ./${{ matrix.context }}/${{ matrix.dockerfile }}
           builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64,linux/arm64
+          push: true
           tags: eksponent/${{ matrix.image }}:${{ matrix.tag }}
 
 
