--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -55,7 +55,7 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: eksponent/${{ matrix.image }}:${{ matrix.tag }}
+          tags: ${{ matrix.image }}:${{ matrix.tag }}
 
 
 
