--- a/php8/Dockerfile-8-1-fpm
+++ b/php8/Dockerfile-8-1-fpm
@@ -23,9 +23,12 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     msmtp \
     libzip-dev
 
-RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap APCu bcmath \
+RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap bcmath \
     && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/  \
     && docker-php-ext-install -j$(nproc) gd exif
+
+RUN pecl install apcu igbinary \
+    && docker-php-ext-enable apcu igbinary
 
 # imagemagick as PHP extension
 RUN apt-get install -y libmagickwand-dev --no-install-recommends \
