--- a/php8/Dockerfile-8-0-fpm
+++ b/php8/Dockerfile-8-0-fpm
@@ -25,7 +25,7 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
 
 RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap bcmath \
     && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/  \
-    && docker-php-ext-install -j$(nproc) gd exif \
+    && docker-php-ext-install -j$(nproc) gd exif
 
 RUN pecl install apcu igbinary \
     && docker-php-ext-enable apcu igbinary
