--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -44,6 +44,19 @@ jobs:
             context: php7
             dockerfile: Dockerfile-7-4-fpm
             tag: 7-4-fpm
+          # PHP workers
+          - image: eksponent/php-with-supervisor-for-workers
+            context: php-with-supervisor-for-workers
+            dockerfile: Dockerfile-8.0
+            tag: 8.0
+          - image: eksponent/php-with-supervisor-for-workers
+            context: php-with-supervisor-for-workers
+            dockerfile: Dockerfile-8.1
+            tag: 8.1
+          - image: eksponent/php-with-supervisor-for-workers
+            context: php-with-supervisor-for-workers
+            dockerfile: Dockerfile-8.2
+            tag: 8.2
     steps:
       -
         name: Checkout
