--- a/php-with-supervisor-for-workers/Dockerfile-8.1
+++ b/php-with-supervisor-for-workers/Dockerfile-8.1
@@ -1,6 +1,5 @@
-# PHP 7 with Supervisor for running Workers
-# Based on carlosbuenosvinos/php-with-supervisor-for-workers
-# Carlos Buenosvinos <carlos.buenosvinos@gmail.com>
+ARG ARCH=${ARCH}
+
 FROM php:8.1-cli
 
 RUN pecl install mysql redis
@@ -10,9 +9,9 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
     libpq-dev \
-    libpng-dev \
     libcurl4-openssl-dev \
     libxml2-dev \
+    libonig-dev \
     apt-utils \
     mariadb-client \
     zlib1g-dev \
@@ -22,29 +21,28 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     unzip \
     mailutils \
     msmtp \
-    libzip-dev \
-    zip \
-    libonig-dev
+    libzip-dev
 
-# Install libzip https://github.com/docker-library/php/issues/61
-RUN docker-php-ext-configure zip \
-  && docker-php-ext-install zip
+RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap bcmath pcntl gd exif sockets \
+    && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/  \
+    && docker-php-ext-configure pcntl --enable-pcntl
 
-# Install required RabbitMQ modules
-RUN docker-php-ext-install -j$(nproc) bcmath
-
-# Install Drupal required modules
-RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache \
-    && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install -j$(nproc) gd \
-    && docker-php-ext-install -j$(nproc) exif \
-    && docker-php-ext-configure pcntl --enable-pcntl \
-    && docker-php-ext-install -j$(nproc) pcntl
+RUN pecl install apcu igbinary \
+    && docker-php-ext-enable apcu igbinary
 
 # imagemagick as PHP extension
-RUN apt-get install -y libmagickwand-6.q16-dev --no-install-recommends \
+RUN apt-get install -y libmagickwand-dev --no-install-recommends \
  && pecl install imagick \
  && echo "extension=imagick.so" > /usr/local/etc/php/conf.d/ext-imagick.ini
+
+ # Install ldap
+RUN \
+    debArch="$(dpkg-architecture --query DEB_BUILD_MULTIARCH)"; \
+    apt-get update && \
+    apt-get install libldap2-dev -y && \
+    rm -rf /var/lib/apt/lists/* && \
+    docker-php-ext-configure ldap --with-libdir=lib/$debArch/ && \
+    docker-php-ext-install -j$(nproc) ldap
 
 # Set timezone
 RUN rm /etc/localtime
@@ -52,7 +50,6 @@ RUN ln -s /usr/share/zoneinfo/Europe/Copenhagen /etc/localtime
 RUN "date"
 
 # Type docker-php-ext-install to see available extensions
-RUN docker-php-ext-install -j$(nproc) pdo pdo_mysql
 RUN echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
 
 RUN apt-get update && apt-get install -y supervisor && apt-get clean
