--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'master'
+      - 'workers'
     tags:
       - 'v*.*.*'
 
@@ -18,45 +18,19 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # PHP 8
-          - image: eksponent/php8
-            context: php8
-            dockerfile: Dockerfile-8-0-fpm
-            tag: 8-0-fpm
-          - image: eksponent/php8
-            context: php8
-            dockerfile: Dockerfile-8-1-fpm
-            tag: 8-1-fpm
-          - image: eksponent/php8
-            context: php8
-            dockerfile: Dockerfile-8-2-fpm
-            tag: 8-2-fpm
-          # PHP 7
-          - image: eksponent/php7
-            context: php7
-            dockerfile: Dockerfile-7-2-fpm-memcache
-            tag: 7-2-fpm-memcache
-          - image: eksponent/php7
-            context: php7
-            dockerfile: Dockerfile-7-3-fpm
-            tag: 7-3-fpm
-          - image: eksponent/php7
-            context: php7
-            dockerfile: Dockerfile-7-4-fpm
-            tag: 7-4-fpm
           # PHP workers
           - image: eksponent/php-with-supervisor-for-workers
             context: php-with-supervisor-for-workers
             dockerfile: Dockerfile-8.0
-            tag: 8.0
+            tag: '8.0'
           - image: eksponent/php-with-supervisor-for-workers
             context: php-with-supervisor-for-workers
             dockerfile: Dockerfile-8.1
-            tag: 8.1
+            tag: '8.1'
           - image: eksponent/php-with-supervisor-for-workers
             context: php-with-supervisor-for-workers
             dockerfile: Dockerfile-8.2
-            tag: 8.2
+            tag: '8.2'
     steps:
       -
         name: Checkout
