--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -31,6 +31,10 @@ jobs:
             context: php8
             dockerfile: Dockerfile-8-2-fpm
             tag: 8-2-fpm
+          - image: eksponent/php8
+            context: php8
+            dockerfile: Dockerfile-8-3-rc-fpm
+            tag: 8-3-rc-fpm
           # PHP 7
           - image: eksponent/php7
             context: php7
@@ -57,6 +61,10 @@ jobs:
             context: php-with-supervisor-for-workers
             dockerfile: Dockerfile-8.2
             tag: '8.2'
+          - image: eksponent/php-with-supervisor-for-workers
+            context: php-with-supervisor-for-workers
+            dockerfile: Dockerfile-8.3-rc
+            tag: '8.3-rc'
     steps:
       -
         name: Checkout
