--- a/php-with-supervisor-for-workers/Dockerfile-8.3
+++ b/php-with-supervisor-for-workers/Dockerfile-8.3
@@ -30,10 +30,9 @@ RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap b
 RUN pecl install apcu igbinary \
     && docker-php-ext-enable apcu igbinary
 
-# imagemagick as PHP extension
-RUN apt-get install -y libmagickwand-dev --no-install-recommends \
- && pecl install imagick \
- && echo "extension=imagick.so" > /usr/local/etc/php/conf.d/ext-imagick.ini
+# Imagemagick as PHP extension
+COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/local/bin/
+RUN install-php-extensions imagick/imagick@28f27044e435a2b203e32675e942eb8de620ee58
 
  # Install ldap
 RUN \
