--- a/php-with-supervisor-for-workers/Dockerfile-8.2
+++ b/php-with-supervisor-for-workers/Dockerfile-8.2
@@ -21,10 +21,11 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     unzip \
     mailutils \
     msmtp \
-    libzip-dev
+    libzip-dev \
+    libavif-dev
 
 RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap bcmath pcntl gd exif sockets \
-    && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/  \
+    && docker-php-ext-configure gd --with-avif --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/  \
     && docker-php-ext-configure pcntl --enable-pcntl
 
 RUN pecl install apcu igbinary \
