--- a/php8/Dockerfile-8-1-fpm
+++ b/php8/Dockerfile-8-1-fpm
@@ -24,9 +24,10 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     libzip-dev \
     libavif-dev
 
-RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap bcmath \
+RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap bcmath pcntl \
     && docker-php-ext-configure gd --with-avif --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/  \
-    && docker-php-ext-install -j$(nproc) gd exif
+    && docker-php-ext-install -j$(nproc) gd exif \
+    && docker-php-ext-configure -j$(nproc) pcntl --enable-pcntl
 
 RUN pecl install apcu igbinary \
     && docker-php-ext-enable apcu igbinary
