--- a/php8/Dockerfile-8-2-fpm
+++ b/php8/Dockerfile-8-2-fpm
@@ -24,7 +24,7 @@ RUN apt-get update && apt-get install -y  --no-install-recommends \
     libzip-dev \
     libavif-dev
 
-RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap bcmath pcntl \
+RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap bcmath pcntl sockets \
     && docker-php-ext-configure gd --with-avif --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/  \
     && docker-php-ext-install -j$(nproc) gd exif \
     && docker-php-ext-configure pcntl --enable-pcntl
