--- a/php8/Dockerfile-8-3-fpm
+++ b/php8/Dockerfile-8-3-fpm
@@ -54,7 +54,7 @@ RUN "date"
 RUN echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
 
 # Install Composer
-COPY --from=composer:2.7.8 /usr/bin/composer /usr/local/bin/composer
+COPY --from=composer:lts /usr/bin/composer /usr/local/bin/composer
 
 ADD entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
