--- a/php-with-supervisor-for-workers/Dockerfile-8.3
+++ b/php-with-supervisor-for-workers/Dockerfile-8.3
@@ -28,8 +28,8 @@ RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap b
     && docker-php-ext-configure gd --with-avif --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/  \
     && docker-php-ext-configure pcntl --enable-pcntl
 
-RUN pecl install apcu igbinary \
-    && docker-php-ext-enable apcu igbinary
+RUN pecl install apcu igbinary opentelemetry-stable \
+    && docker-php-ext-enable apcu igbinary opentelemetry
 
 # Imagemagick as PHP extension
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/local/bin/
