--- a/php8/Dockerfile-8-0-fpm
+++ b/php8/Dockerfile-8-0-fpm
@@ -28,8 +28,8 @@ RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring opcache zip curl soap b
     && docker-php-ext-install -j$(nproc) gd exif \
     && docker-php-ext-configure pcntl --enable-pcntl
 
-RUN pecl install apcu igbinary \
-    && docker-php-ext-enable apcu igbinary
+RUN pecl install apcu igbinary opentelemetry-stable \
+    && docker-php-ext-enable apcu igbinary opentelemetry
 
 # imagemagick as PHP extension
 RUN apt-get install -y libmagickwand-dev --no-install-recommends \
